--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@iconify/json": "^2.2.307",
     "@nuxt/fonts": "^0.10.3",
     "@pinia/nuxt": "^0.10.1",
+    "apexcharts": "4.4.0",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "zod": "^3.24.2",
+    "vue3-apexcharts": "^1.8.0",
     "@nuxt/ui": "2.21.0",
     "@nuxtjs/supabase": "1.4.6",
     "nuxt": "^3.15.4"
